{
  "version": 4,
  "terraform_version": "0.14.4",
  "serial": 41,
  "lineage": "d4228bde-eb1c-56a6-4a6e-3a8e1c1077d4",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0fdd2d4225babecc3",
            "id": "r-rtb-0b70e7b1f199a41941080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0b70e7b1f199a4194",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": null,
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.rt_public.aws_default_route_table.main_route_table",
            "module.vpc.aws_internet_gateway.gw",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.rt_association_private[0]",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ce036e938fcbc5d9",
            "route_table_id": "rtb-03e3d5d4822bef6a7",
            "subnet_id": "subnet-0122c350245605f83"
          },
          "dependencies": [
            "data.aws_subnet_ids.private",
            "module.rt_private.aws_route_table.route_table",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.rt_association_private[1]",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0957cd7a586ddf0da",
            "route_table_id": "rtb-03e3d5d4822bef6a7",
            "subnet_id": "subnet-05b48dea472cba842"
          },
          "dependencies": [
            "data.aws_subnet_ids.private",
            "module.rt_private.aws_route_table.route_table",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.rt_association_public[0]",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-037b8b913dd1ec12b",
            "route_table_id": "rtb-0b70e7b1f199a4194",
            "subnet_id": "subnet-00fddf39244058919"
          },
          "dependencies": [
            "data.aws_subnet_ids.public",
            "module.rt_public.aws_default_route_table.main_route_table",
            "module.vpc.aws_internet_gateway.gw",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.rt_association_public[1]",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-045f5f5456c59fa24",
            "route_table_id": "rtb-0b70e7b1f199a4194",
            "subnet_id": "subnet-072e7aa409c2fde13"
          },
          "dependencies": [
            "data.aws_subnet_ids.public",
            "module.rt_public.aws_default_route_table.main_route_table",
            "module.vpc.aws_internet_gateway.gw",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.rt_private",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-03e3d5d4822bef6a7",
            "owner_id": "378425785477",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "Production",
              "Main": "false",
              "Name": "Prod_RT_Public-Private-RT",
              "Public": "false"
            },
            "vpc_id": "vpc-0f3e039f01c081923"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.rt_public",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "main_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "default_route_table_id": "rtb-0b70e7b1f199a4194",
            "id": "rtb-0b70e7b1f199a4194",
            "owner_id": "378425785477",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0fdd2d4225babecc3",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "Production",
              "Main": "true",
              "Name": "Prod_RT_Public-Public-RT",
              "Public": "true"
            },
            "vpc_id": "vpc-0f3e039f01c081923"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.gw",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnet",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "192.168.1.0/24",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:378425785477:subnet/subnet-072e7aa409c2fde13",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "192.168.1.0/24",
            "id": "subnet-072e7aa409c2fde13",
            "map_public_ip_on_launch": true,
            "owner_id": "378425785477",
            "tags": {
              "Environment": "Production",
              "Name": "us-east-1a-Production",
              "Public": "true"
            },
            "vpc_id": "vpc-0f3e039f01c081923"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": "192.168.2.0/24",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:378425785477:subnet/subnet-00fddf39244058919",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "192.168.2.0/24",
            "id": "subnet-00fddf39244058919",
            "map_public_ip_on_launch": true,
            "owner_id": "378425785477",
            "tags": {
              "Environment": "Production",
              "Name": "us-east-1b-Production",
              "Public": "true"
            },
            "vpc_id": "vpc-0f3e039f01c081923"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": "192.168.3.0/24",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:378425785477:subnet/subnet-05b48dea472cba842",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "192.168.3.0/24",
            "id": "subnet-05b48dea472cba842",
            "map_public_ip_on_launch": false,
            "owner_id": "378425785477",
            "tags": {
              "Environment": "Production",
              "Name": "us-east-1a-Production",
              "Public": "false"
            },
            "vpc_id": "vpc-0f3e039f01c081923"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": "192.168.4.0/24",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:378425785477:subnet/subnet-0122c350245605f83",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "192.168.4.0/24",
            "id": "subnet-0122c350245605f83",
            "map_public_ip_on_launch": false,
            "owner_id": "378425785477",
            "tags": {
              "Environment": "Production",
              "Name": "us-east-1b-Production",
              "Public": "false"
            },
            "vpc_id": "vpc-0f3e039f01c081923"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:378425785477:internet-gateway/igw-0fdd2d4225babecc3",
            "id": "igw-0fdd2d4225babecc3",
            "owner_id": "378425785477",
            "tags": {
              "Name": "Production-gw"
            },
            "vpc_id": "vpc-0f3e039f01c081923"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:378425785477:vpc/vpc-0f3e039f01c081923",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-0bda040846bcc75b5",
            "default_route_table_id": "rtb-0b70e7b1f199a4194",
            "default_security_group_id": "sg-08363c12fdd03428f",
            "dhcp_options_id": "dopt-0237f56e9219bf06c",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0f3e039f01c081923",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0b70e7b1f199a4194",
            "owner_id": "378425785477",
            "tags": {
              "Environment": "Production",
              "Name": "Production-dhcp"
            }
          }
        }
      ]
    }
  ]
}